# cordia-backend

./: .gitignore  debug_main.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 122788c37ac0_initial_migration.py  16712157a5c7_add_full_practitioner_details.py  5b5ff7275c09_add_eventoutbox_table.py  5b5ff7275c09_recreate_deleted.py  f9986c665403_create_eventoutbox_table.py
app/: all_models.py  main.py
app/api/: router.py
app/core/: base.py  config.py  db.py  logging.py  paging.py  redis.py  security.py  speech_to_text.py  twilio.py
app/modules/admin/: models.py  repository.py  router.py  service.py
app/modules/agents/: models.py  router.py
app/modules/appointments/: booking_logic.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/audit/: models.py  router.py  service.py
app/modules/availability/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/catalogs/: models.py  repository.py  router.py  schemas.py
app/modules/consent/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/conversations/: models.py  repository.py  router.py  schemas.py  service.py  state_service.py  transcripts.py
app/modules/directory/: models.py
app/modules/events/: outbox.py
app/modules/exports/: router.py
app/modules/fhir/: mapping.py  router.py
app/modules/identity/: models.py  repository.py  router.py  schemas.py  service.py
app/platform/: provider_registry.py
dockerfile/: app.Dockerfile
scripts/: create_prmdb.sh  ingest_practitioner_data.py
(+53 files in other folders)
